--- a/thesis.bib
+++ b/thesis.bib
@@ -1630,3 +1630,31 @@
   year={2004},
   publisher={Cambridge University Press}
 }
+
+@article{arnold2009circumferential,
+  title={Circumferential film cooling effectiveness in a LOX/H2 subscale combustion chamber},
+  author={Arnold, Richard and Suslov, Dmitry and Haidn, OJ},
+  journal={Journal of Propulsion and Power},
+  volume={25},
+  number={3},
+  pages={760--770},
+  year={2009}
+}
+
+@article{qiu2015investigation,
+  title={An investigation of thermodynamic states during high-pressure fuel injection using equilibrium thermodynamics},
+  author={Qiu, Lu and Reitz, Rolf D},
+  journal={International Journal of Multiphase Flow},
+  volume={72},
+  pages={24--38},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{telaar2000experimental,
+  title={Experimental investigation of breakup of turbulent liquid jets},
+  author={Telaar, J and Schneider, G and Mayer, W},
+  booktitle={16th Annual Conference on Liquid Atomization and Spray Systems},
+  pages={VI--9},
+  year={2000}
+}
