--- a/thesis.tex
+++ b/thesis.tex
@@ -51,8 +51,13 @@
 \includeonly{
     preliminaries/title,
     chapters/intro,
+    chapters/math,
+    chapters/verification,
+    chapters/tabulation,
     chapters/sCO2,
+    chapters/sCO2_bk,
     chapters/ISATVLE,
+    chapters/ISATVLE_bk,
     chapters/science,
     chapters/experiment,
     chapters/simulation,
@@ -78,20 +83,27 @@
 % Now lets include the body of the document...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{chapters/intro}
-\include{chapters/sCO2}
+%\include{chapters/math}
+%\include{chapters/verification}
+%\include{chapters/tabulation}
+
+%\include{chapters/sCO2}
+%\include{chapters/ISATVLE}
+
+%\include{chapters/sCO2}
 %\include{chapters/ISATVLE}
 %Base Chapters
-\include{chapters/science}
-\include{chapters/experiment}
+%\include{chapters/science}
+%\include{chapters/experiment}
 
 %Software Chapters
-\include{chapters/simulation}
-\include{chapters/reconstruction}
+%\include{chapters/simulation}
+%\include{chapters/reconstruction}
 
 %Analysis Chapters
-\include{chapters/data_set}
-\include{chapters/event_selection}
-\include{chapters/analysis}
+%\include{chapters/data_set}
+%\include{chapters/event_selection}
+%\include{chapters/analysis}
 
 %Conclusion
 \include{chapters/conclusion}
