--- a/thesis.bib
+++ b/thesis.bib
@@ -384,16 +384,7 @@
   publisher={The Royal Society London}
 }
 
-@article{pope1997computationally,
-  title={Computationally efficient implementation of combustion chemistry using in situ adaptive tabulation},
-  author={Pope, Stephen B},
-  journal={Combustion Theory and Modelling},
-  volume={1},
-  number={1},
-  year={1997},
-  pages={41--63},
-  publisher={Taylor \& Francis}
-}
+
 
 @inproceedings{chehroudi1999initial,
   title={Initial growth rate and visual characteristics of a round jet into a sub-to supercritical environment of relevance to rocket, gas turbine, and diesel engines},
@@ -1132,16 +1123,7 @@
 
 
 
-@article{lu2009improved,
-  title={An improved algorithm for in situ adaptive tabulation},
-  author={Lu, Liuyan and Pope, Stephen B},
-  journal={Journal of Computational Physics},
-  volume={228},
-  number={2},
-  pages={361--386},
-  year={2009},
-  publisher={Elsevier}
-}
+
 
 @book{michelsen2007thermodynamic,
   title={Thermodynamic models: fundamentals \& computational aspects},
@@ -1657,4 +1639,226 @@
   booktitle={16th Annual Conference on Liquid Atomization and Spray Systems},
   pages={VI--9},
   year={2000}
+}
+
+@article{pope1997computationally,
+  title={Computationally efficient implementation of combustion chemistry using in situ adaptive tabulation},
+  author={Pope, Stephen B},
+  year={1997},
+  publisher={Taylor \& Francis}
+}
+
+@article{gordon2007numerical,
+  title={A numerical study of auto-ignition in turbulent lifted flames issuing into a vitiated co-flow},
+  author={Gordon, Robert L and Masri, Assaad R and Pope, Stephen B and Goldin, Graham M},
+  journal={Combustion Theory and Modelling},
+  volume={11},
+  number={3},
+  pages={351--376},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+@article{wang2003application,
+  title={Application of in situ adaptive tabulation to CFD simulation of nano-particle formation by reactive precipitation},
+  author={Wang, Liguang and Fox, Rodney O},
+  journal={Chemical Engineering Science},
+  volume={58},
+  number={19},
+  pages={4387--4401},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{singer2006modeling,
+  title={Modeling unsteady reacting flow with operator splitting and ISAT},
+  author={Singer, Michael A and Pope, Stephen B and Najm, Habib N},
+  journal={Combustion and Flame},
+  volume={147},
+  number={1-2},
+  pages={150--162},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{singer2004exploiting,
+  title={Exploiting ISAT to solve the reaction--diffusion equation},
+  author={Singer, MA and Pope, SB},
+  journal={Combustion theory and modelling},
+  volume={8},
+  number={2},
+  pages={361},
+  year={2004},
+  publisher={IOP Publishing}
+}
+
+@article{tang2002implementation,
+  title={Implementation of combustion chemistry by in situ adaptive tabulation of rate-controlled constrained equilibrium manifolds},
+  author={Tang, Qing and Pope, Stephen B},
+  journal={Proceedings of the Combustion Institute},
+  volume={29},
+  number={1},
+  pages={1411--1417},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{chen2004analysis,
+  title={Analysis of in situ adaptive tabulation performance for combustion chemistry and improvement with a modified search algorithm},
+  author={Chen, J-Y},
+  journal={Combustion science and technology},
+  volume={176},
+  number={7},
+  pages={1153--1169},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{lu2005investigation,
+  title={Investigation of strategies for the parallel implementation of ISAT in LES/FDF/ISAT computations},
+  author={Lu, Liuyan and Ren, Zhuyin and Lantz, SR and Raman, Venkatramanan and Pope, Stephen B and Pitsch, Heinz},
+  booktitle={Fourth Joint Meeting of the US Sections of the Combustion Institute, Drexel University, Philadelphia, PA},
+  pages={20--23},
+  year={2005}
+}
+
+@article{lu2009improved,
+  title={An improved algorithm for in situ adaptive tabulation},
+  author={Lu, Liuyan and Pope, Stephen B},
+  journal={Journal of Computational Physics},
+  volume={228},
+  number={2},
+  pages={361--386},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{blasi2016situ,
+  title={In situ adaptive tabulation (ISAT) to accelerate transient computational fluid dynamics with complex heterogeneous chemical kinetics},
+  author={Blasi, Justin M and Kee, Robert J},
+  journal={Computers \& Chemical Engineering},
+  volume={84},
+  pages={36--42},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+@article{ouro2019scalability,
+  title={Scalability of an Eulerian-Lagrangian large-eddy simulation solver with hybrid MPI/OpenMP parallelisation},
+  author={Ouro, Pablo and Fraga, Bru{\~n}o and Lopez-Novoa, Unai and Stoesser, Thorsten},
+  journal={Computers \& fluids},
+  volume={179},
+  pages={123--136},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{he2020structured,
+  title={Structured mesh-oriented framework design and optimization for a coarse-grained parallel CFD solver based on hybrid MPI/OpenMP programming},
+  author={He, Feng and Dong, Xiaoshe and Zou, Nianjun and Wu, Weiguo and Zhang, Xingjun},
+  journal={The Journal of Supercomputing},
+  volume={76},
+  pages={2815--2841},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{zhong2020efficient,
+  title={An efficient large-scale mesh deformation method based on MPI/OpenMP hybrid parallel radial basis function interpolation},
+  author={Zhong, ZHAO and Rong, MA and Lei, HE and Chang, Xinghua and Zhang, Laiping},
+  journal={Chinese Journal of Aeronautics},
+  volume={33},
+  number={5},
+  pages={1392--1404},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{hoefler2013mpi+,
+  title={MPI+ MPI: a new hybrid approach to parallel programming with MPI plus shared memory},
+  author={Hoefler, Torsten and Dinan, James and Buntinas, Darius and Balaji, Pavan and Barrett, Brian and Brightwell, Ron and Gropp, William and Kale, Vivek and Thakur, Rajeev},
+  journal={Computing},
+  volume={95},
+  pages={1121--1136},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{brinskiy2017introduction,
+  title={An introduction to MPI-3 shared memory Programming},
+  author={Brinskiy, Mikhail and Lubin, Mark},
+  journal={Available https: l/software. inteLcomlenus},
+  year={2017}
+}
+
+@inproceedings{rabenseifner2009hybrid,
+  title={Hybrid MPI/OpenMP parallel programming on clusters of multi-core SMP nodes},
+  author={Rabenseifner, Rolf and Hager, Georg and Jost, Gabriele},
+  booktitle={2009 17th Euromicro international conference on parallel, distributed and network-based processing},
+  pages={427--436},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{bonwick1994slab,
+  title={The slab allocator: An object-caching kernel memory allocator.},
+  author={Bonwick, Jeff and others},
+  booktitle={USENIX summer},
+  volume={16},
+  year={1994},
+  organization={Boston, MA, USA}
+}
+
+@article{lu2009computationally,
+  title={Computationally efficient implementation of combustion chemistry in parallel PDF calculations},
+  author={Lu, Liuyan and Lantz, Steven R and Ren, Zhuyin and Pope, Stephen B},
+  journal={Journal of Computational Physics},
+  volume={228},
+  number={15},
+  pages={5490--5525},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{wu2018parallel,
+  title={Parallel chemistry acceleration algorithms based on ISAT method in gaseous detonation computations},
+  author={Wu, Jintao and Dong, Gang and Li, Baoming},
+  journal={Computers \& Fluids},
+  volume={167},
+  pages={265--284},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{contino2011coupling,
+  title={Coupling of in situ adaptive tabulation and dynamic adaptive chemistry: An effective method for solving combustion in engine simulations},
+  author={Contino, Francesco and Jeanmart, Herv{\'e} and Lucchini, Tommaso and D’Errico, Gianluca},
+  journal={Proceedings of the Combustion Institute},
+  volume={33},
+  number={2},
+  pages={3057--3064},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{yang1998treating,
+  title={Treating chemistry in combustion with detailed mechanisms—in situ adaptive tabulation in principal directions—premixed combustion},
+  author={Yang, B and Pope, SB},
+  journal={Combustion and Flame},
+  volume={112},
+  number={1-2},
+  pages={85--112},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{llave1988vapor,
+  title={Vapor-liquid equilibria of nitrogen-hydrocarbon systems at elevated pressures},
+  author={Llave, Feliciano M and Chung, Ting Horng},
+  journal={Journal of Chemical and Engineering Data},
+  volume={33},
+  number={2},
+  pages={123--128},
+  year={1988},
+  publisher={ACS Publications}
 }
