--- a/preliminaries/title.tex
+++ b/preliminaries/title.tex
@@ -15,7 +15,11 @@
 % "The title of the thesis must not contain chemical or mathematical formulas,
 % symbols, superscripts, subscripts, Greek letters, or other non-standard
 % characters; words must be substituted."
-\title{\bf The vapor-liquid equilibrium phases change model accelerated using ISAT and ISAT optimization}
+\title{\bf The vapor-liquid equilibrium phases change model accelerated using \textit{in situ} adaptive tabulation}
+
+%The vapor-liquid equilibrium phases change model accelerated using ISAT and ISAT optimization
+%Transcritical flow simulation using vapor-liquid equilibrium phases change model and phase simualtion
+
 \author{Full Author Name}
 % Advisor name, put co-advisors here as well separated by commas
 \director{Name of the Advisor}
