--- a/thesis.bib
+++ b/thesis.bib
@@ -1862,3 +1862,11 @@
   year={1988},
   publisher={ACS Publications}
 }
+
+@article{schwer2018liquid,
+  title={Liquid-fueled detonation modeling at the US Naval Research Laboratory},
+  author={Schwer, Douglas A and Kessler, David},
+  year={2018}
+}
+
+
