--- a/thesis.tex
+++ b/thesis.tex
@@ -91,11 +91,12 @@
 \include{chapters/math}
 \include{chapters/verification}
 \include{chapters/tabulation}
-\include{chapters/parISAT}
+
+%\include{chapters/parISAT}
 %\include{chapters/parISAT_bk}
 
 \include{chapters/sCO2}
-\include{chapters/ISATVLE}
+%\include{chapters/ISATVLE}
 
 
 
